test/bad/type_declaration_13.mpp
data Type1 = #CTor;
data Type2 = #CTor; % illegal redeclaration of constructor
